--- a/cricketWeb/web/template.xhtml
+++ b/cricketWeb/web/template.xhtml
@@ -104,10 +104,7 @@
               <div class="container d-flex h-100">
                 <div class="row justify-content-center align-self-center">
                   <div class="col-md-6 intro-info order-md-first order-last">
-                    <h2>Hi <span>#username!</span></h2>
-                    <div>
-                      <a href="#services" class="btn-get-started scrollto">See my Goals</a>
-                    </div>
+                    <ui:insert name="introTitle">Intro Title Default</ui:insert>    
                   </div>
 
                   <div class="col-md-6 intro-img order-md-last order-first">
@@ -119,9 +116,9 @@
             </section><!-- #intro -->
         <main id="main">
             <!--==========================
-            Services Section
+            content Section
             ============================-->
-            <section id="services" class="section-bg">
+            <section id="contentSection" class="section-bg">
               <div class="container">
 
 
