Já faz login e logout. As validações nao estão 100%, irei melhorar futuramente

--- a/cricketWeb/web/dashboard.xhtml
+++ b/cricketWeb/web/dashboard.xhtml
@@ -16,6 +16,8 @@ and open the template in the editor.
     <body>
         <ui:composition template = "template.xhtml">
             
+            <f:event listener="#{sessionController.validateIfLoggedUser}" type="preRenderView" />
+
             <ui:define name = "introTitle">
                 <h2>Hi <span>#username!</span></h2>
                 <div>
