SignUp totalmente funcional, BD retificada totalidade

--- a/cricketWeb/web/index.xhtml
+++ b/cricketWeb/web/index.xhtml
@@ -49,17 +49,21 @@ and open the template in the editor.
                         <h:outputText value="#{bundle.UserFullName}"/><br/>
                         <h:inputText value="#{sessionController.clientName}"/><br/>
                         <h:outputText value="#{bundle.UserBirthDate}"/><br/>
-                        <!--<h:inputText value=""/><br/>-->
+                        <h:inputText value="#{sessionController.birth}">
+                            <f:convertDateTime pattern="dd/mm/yyyy"/>  
+                        </h:inputText>
+                        <br/>
                         <h:outputText value="#{bundle.UserPassword}"/><br/>
                         <h:inputSecret value="#{sessionController.password}"/><br/>
                         <h:outputText value="#{bundle.UserRetypePassword}"/><br/>
                         <h:inputSecret value="#{sessionController.passwordConfirmation}"/><br/>
                         <h:outputText value="#{bundle.UserGender}"/><br/>
-                        <h:inputText value="#{sessionController.clientName}"/><br/>
+                        <h:inputText value="#{sessionController.gender}">
+                        </h:inputText><br/>
                         <br/><br/>
                         <h:messages />
 
-                        <h:commandButton class ="btn btn-info" action="#{sessionController.processSignUp}" value="#{bundle.SignUp}"></h:commandButton>
+                        <h:commandButton class ="btn btn-info" action="#{sessionController.process_SignUp()}" value="#{bundle.SignUp}"></h:commandButton>
                     </h:form>
                     
                 </div>
