Datepicker com localdate

--- a/cricketWeb/web/index.xhtml
+++ b/cricketWeb/web/index.xhtml
@@ -49,7 +49,7 @@ and open the template in the editor.
                         <h:outputText value="#{bundle.UserFullName}"/><br/>
                         <h:inputText value="#{sessionController.clientName}"/><br/>
                         <h:outputText value="#{bundle.UserBirthDate}"/><br/>
-                        <h:inputText value="#{sessionController.birth}" styleClass = "form-control datepicker"></h:inputText>
+                        <h:inputText value="#{sessionController.birthTmp}" styleClass = "form-control datepicker"></h:inputText>
                         <br/>
                         <h:outputText value="#{bundle.UserPassword}"/><br/>
                         <h:inputSecret value="#{sessionController.password}"/><br/>
