--- a/cricketWeb/web/template.xhtml
+++ b/cricketWeb/web/template.xhtml
@@ -149,7 +149,12 @@
 
         <!-- Template Main Javascript File -->
         <script src="resources/js/main.js"></script>
-
+        
+        <!-- DatePicker JavaScript & CSS -->
+        <script type="text/javascript" src="https://code.jquery.com/jquery-1.12.4.js"></script>
+        <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"> </script>
+        <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> </link>
+        <script src="resources/js/formatDatePicker.js"></script>
     </h:body>
 </html>
 
