--- a/cricketWeb/web/dashboard.xhtml
+++ b/cricketWeb/web/dashboard.xhtml
@@ -24,7 +24,7 @@ and open the template in the editor.
             </ui:define>
             
             <ui:define name = "containerTitle">
-                <f:event listener="#{sessionController.validateIfLoggedUser}" type="preRenderView" />
+                <f:event listener="#{sessionBean.validateIfLoggedUser}" type="preRenderView" />
 
                 <h3>Services</h3>
                 <p>Laudem latine persequeris id sed, ex fabulas delectus quo. No vel partiendo abhorreant vituperatoribus.</p>
