NOva Correcao no template

--- a/cricketWeb/web/template.xhtml
+++ b/cricketWeb/web/template.xhtml
@@ -45,7 +45,7 @@
                           <li class="nav-item">
                               <li>
                                   <h:commandLink action="#{sessionBean.processLogout}">
-                                      asd <span class="glyphicon glyphicon-off"></span>
+                                      <img src="https://img.icons8.com/office/30/000000/shutdown.png"></img>
                                   </h:commandLink>
                               </li>
                           </li>    
