--- a/cricketWeb/web/template.xhtml
+++ b/cricketWeb/web/template.xhtml
@@ -67,13 +67,15 @@
 
                     <div class="container">
 
-                      <header class="section-header">
-                        <ui:insert name="containerTitle">Default Title</ui:insert>    
-                      </header>
+                        <header class="section-header">
+                            <div class="jumbotron">
+                                <ui:insert name="containerTitle">Default Title</ui:insert>   
+                            </div>
+                        </header>
 
-                      <div class="row">
-                          <ui:insert name="containerContent">Default Body</ui:insert>
-                      </div>
+                        <div class="row">
+                            <ui:insert name="containerContent">Default Body</ui:insert>
+                        </div>
                     </div>    
                 </div>
               <div class="col-2"></div>
