--- a/cricketWeb/web/dashboard.xhtml
+++ b/cricketWeb/web/dashboard.xhtml
@@ -27,8 +27,11 @@ and open the template in the editor.
                 <f:event listener="#{sessionBean.validateIfLoggedUser}" type="preRenderView" />
 
                 <h3>#{bundle.GoalListTitle}</h3>
-                <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#demo">Simple collapsible</button>
-                <div id="demo" class="collapse panel panel-default">
+                <p> #{bundle.GoalListDesc}</p>
+
+                
+                <button type="button" class="btn btn-info" data-toggle="collapse" data-target="#filters">#{bundle.GoalListFiltersButton}</button>
+                <div id="filters" class="collapse panel panel-default">
                     
                     <br></br>
                     <div class="input-group">
