--- a/cricketWeb/web/index.xhtml
+++ b/cricketWeb/web/index.xhtml
@@ -18,6 +18,7 @@ and open the template in the editor.
         <ui:composition template = "template.xhtml">
             
             <ui:define name = "containerTitle">
+                <f:event listener="#{sessionBean.validateIfUserIsLogged}" type="preRenderView" />
                 <h3>#{bundle.SignInSignUp}</h3>
                 <p> #{bundle.SignInSignUpDesc}</p>
             </ui:define>
