INiciado o create de objetivos Fabrica de DTOs iniciada

--- a/cricketWeb/web/index.xhtml
+++ b/cricketWeb/web/index.xhtml
@@ -65,8 +65,8 @@ and open the template in the editor.
                         <h:outputText value="#{bundle.UserGender}"/><br/>
                         
                         <h:selectOneRadio value="#{sessionBean.gender}" required="true" class="radio">
-                                <f:selectItem itemValue="MAN" itemLabel="Masculino" />
-                                <f:selectItem itemValue="WOMAN" itemLabel="Feminino" />
+                                <f:selectItem itemValue="MALE" itemLabel="Male" />
+                                <f:selectItem itemValue="WOMAN" itemLabel="Woman" />
                         </h:selectOneRadio>
                         <br/>
                         <br/>
