--- a/cricketWeb/web/template.xhtml
+++ b/cricketWeb/web/template.xhtml
@@ -96,6 +96,8 @@
         <script type="text/javascript" src="https://code.jquery.com/ui/1.12.1/jquery-ui.js"> </script>
         <link rel="stylesheet" href="https://code.jquery.com/ui/1.12.1/themes/base/jquery-ui.css"> </link>
         <script src="resources/js/formatDatePicker.js"></script>
+        <script src="resources/js/toggleButton.js"></script>
+
     </h:body>
 </html>
 
