remove já faz stand-by-> depois associar corretamente o id do goal efetuar quando se clica no bottão remover, o reload da página(vou ver isso)

--- a/cricketWeb/web/dashboard.xhtml
+++ b/cricketWeb/web/dashboard.xhtml
@@ -95,9 +95,14 @@ and open the template in the editor.
                                         </div>
                                         <div class="col-1">
 
-                                            <img src="https://img.icons8.com/bubbles/50/000000/maintenance.png"></img>
+                                                <img src="https://img.icons8.com/bubbles/50/000000/maintenance.png"></img>
 
-                                        </div>
+
+                                            </div>
+                                            <h:form id="x">
+                                                <h:commandLink id="d" value="Remover" action="#{goalBean.processRemoveGoal()}"/>
+                                            </h:form>
+                                        
                                     </div>
                                 </div>
                                 <div class="col-1"></div>
