Metodo Assincrono feito e adicao nos controladores Remoção, remove com o id seleccionado pelo user

--- a/cricketWeb/web/createGoal.xhtml
+++ b/cricketWeb/web/createGoal.xhtml
@@ -46,7 +46,7 @@ and open the template in the editor.
                             
                             
                             <h:outputText value="#{bundle.GoalCategory}"/><br/>
-                            <h:selectOneMenu value="#{goalBean.goalDTOTemp.categoryDTO}" converter="categoryDTOConverter">
+                            <h:selectOneMenu value="#{goalBean.goalDTOTemp.idCategory}" converter="categoryDTOConverter">
                                 <f:selectItems value="#{categoryBean.allCategoriesFromLoggedUser}" var="categoryDTO"
                                                itemValue="#{categoryDTO}"
                                                itemLabel="#{categoryDTO.nome}"/>
