edit goal front end feito

--- a/cricketWeb/web/dashboard.xhtml
+++ b/cricketWeb/web/dashboard.xhtml
@@ -101,7 +101,7 @@ and open the template in the editor.
 
                                         <h:form id="a">
 
-                                            <h:commandLink id="b" value="Editar"  action="#{goalBean.processEditGoal()}"/>
+                                            <h:commandLink id="b" value="Editar"  action="#{goalBean.editGoal(goalTmp.id_goal)}"/>
 
                                         </h:form>
                                     </div>
