--- a/cricketWeb/web/dashboard.xhtml
+++ b/cricketWeb/web/dashboard.xhtml
@@ -85,8 +85,7 @@ and open the template in the editor.
                                             </div>                                
                                             <div class="col-3">
                                                 <div class="progress">
-                                                    <!-- TODO: the style must be for example "70%", "30%", etc... Not working... -->
-                                                    <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="#{ (goalTmp.currentValue / goalTmp.totalValue) * 100 } %">
+                                                    <div class="progress-bar" role="progressbar" aria-valuemin="0" aria-valuemax="100" style="width: #{ (goalTmp.currentValue / goalTmp.totalValue) * 100 }%">
                                                         #{ (goalTmp.currentValue / goalTmp.totalValue) * 100 } %
                                                     </div>
                                                 </div>
