--- a/cricketWeb/web/template.xhtml
+++ b/cricketWeb/web/template.xhtml
@@ -41,6 +41,10 @@
                             <a class="nav-link" href="#">Link</a>
                           </li>
                           <li class="nav-item">
+                              <h:link outcome="indexCategories">
+                                  #{bundle.Categories}
+                                  <img src="https://img.icons8.com/office/40/000000/opened-folder.png"></img>
+                              </h:link>
                             <a class="nav-link" href="#">Link</a>
                           </li>
                           <li class="nav-item">
