--- a/cricketWeb/web/template.xhtml
+++ b/cricketWeb/web/template.xhtml
@@ -43,7 +43,7 @@
                             <li class="nav-item">
                                 <li>
 
-                                    <a class="nav-link" href="/cricketWeb/faces/login.xhtml"><img src="https://img.icons8.com/color/48/000000/gender-neutral-user.png"></img></a>
+                                    <a class="nav-link" href="/cricketWeb/faces/editProfile.xhtml"><img src="https://img.icons8.com/color/48/000000/gender-neutral-user.png"></img></a>
 
                                 </li>
                                 <a class="nav-link" href="#">Link</a>
