--- a/cricketWeb/web/login.xhtml
+++ b/cricketWeb/web/login.xhtml
@@ -26,41 +26,25 @@ and open the template in the editor.
 
             <ui:define name = "containerContent">
                 
-                <div class="limiter">
-                <div class="container-login100">
-                  <div class="wrap-login100">
-                    <div class="login100-pic js-tilt">
-                      <img src="images/cricket.png" alt="IMG" />
-                    </div>
-                    <form class="login100-form validate-form" action="">
-                      <span class="login100-form-title"> Member Login </span>
-                      <div class="wrap-input100 validate-input">
-                        <input class="input100" type="text" name="email" /> <span
-                        class="focus-input100"></span> <span
-                        class="symbol-input100"> <i class="fa fa-envelope"></i>
-                        </span>
-                      </div>
-                      <div class="wrap-input100 validate-input">
-                        <input class="input100" type="password" name="pass" /> <span
-                        class="focus-input100"></span> <span
-                        class="symbol-input100"> <i class="fa fa-lock"></i>
-                        </span>
-                      </div>
-                      <div class="container-login100-form-btn">
-                        <button class="login100-form-btn"> Login </button>
-                      </div>
-                      <div class="text-center p-t-12">
-                        <span class="txt1"> Forgot </span> <a class="txt2"
-                        href="#"> Username / Password? </a>
-                      </div>
-                      <div class="text-center p-t-136">
-                        <a class="txt2" href="#"> Create your Account <i
-                        class="fa fa-long-arrow-right m-l-5"></i> </a>
-                      </div>
-                    </form>
-                  </div>
-                </div>
-              </div>
+                <h3>#{bundle.SignIn}</h3>
+                <h:form>
+
+                    <h:messages></h:messages>
+
+                    <h:outputText value="#{bundle.UserEmail}" /><br/>
+                    <h:inputText id="username" value="#{sessionBean.email}"></h:inputText><br/>
+                    <br></br>
+
+                    <h:outputText value="#{bundle.UserPassword}" /><br/>
+                    <h:inputSecret id="password" value="#{sessionBean.password}"></h:inputSecret><br/>
+
+                    <br/>
+                    <a href="/cricketWeb/faces/registerUser.xhtml">Not registered?Please login or register.</a>
+                    <br/>
+
+                    <h:commandButton class ="btn btn-info" action="#{sessionBean.processSignIn}" value="#{bundle.SignIn}"/>  
+                </h:form>
+                
             </ui:define>
         </ui:composition>
     </h:body>
