history feito. Falta recuperar goals (ao recuperar mete a flag a false, a finaldate a null e current value a 0)

--- a/cricketWeb/web/dashboard.xhtml
+++ b/cricketWeb/web/dashboard.xhtml
@@ -47,7 +47,7 @@ and open the template in the editor.
 
             <ui:define name = "containerContent">
 
-                <c:if test="#{empty goalBean.allGoals}">
+                <c:if test="#{empty goalBean.allNotDoneGoals}">
                     <div class="container">
                         <div class="row p-3 mb-2 bg-light text-dark">
                             <div class="col-1"></div>
@@ -69,12 +69,12 @@ and open the template in the editor.
                     <br></br>
                     <br></br>
 
-                    <c:if test="#{not empty goalBean.allGoals}">
+                    <c:if test="#{not empty goalBean.allNotDoneGoals}">
                         <div class="container">
-                            <ui:repeat value="#{goalBean.allGoals}" var="goalTmp" varStatus="getObj">
+                            <ui:repeat value="#{goalBean.allNotDoneGoals}" var="goalTmp" varStatus="getObj">
                                 
                                 <!-- panel group just to define the background color -->
-                                <h:panelGroup class="row" style="#{goalBean.goalIsEnd(goalTmp)}">
+                                <h:panelGroup class="row" style="#{goalBean.goalWasEnddedSucessfully(goalTmp)}">
                                             
                                     <div class="col-2">
                                         <img src="https://img.icons8.com/plasticine/35/000000/sort-up.png"></img>
