--- a/cricketWeb/web/editCategory.xhtml
+++ b/cricketWeb/web/editCategory.xhtml
@@ -19,8 +19,8 @@ and open the template in the editor.
             
             <ui:define name = "containerTitle">
                 <f:event listener="#{sessionBean.validateIfLoggedUser}" type="preRenderView" />
-                <h3>#{bundle.CreateGoalTitle}</h3>
-                <p> #{bundle.CreateGoalDesc}</p>
+                <h3>#{bundle.EditCategoryTitle}</h3>
+                <p> #{bundle.EditCategoryDesc}</p>
             </ui:define>
 
 
