Commit validate category

--- a/cricketWeb/web/createCategory.xhtml
+++ b/cricketWeb/web/createCategory.xhtml
@@ -33,10 +33,10 @@ and open the template in the editor.
                             <h:messages />
 
                             <h:outputText value="#{bundle.CategoryName}"/><br/>
-                            <h:inputText value="#{categoryBean.categoryDTO.nome}" required="true" styleClass = "form-control"/><br/>
+                            <h:inputText value="#{categoryBean.categoryDTO.nome}" required="true" requiredMessage="Name is required" styleClass = "form-control"/><br/>
                             
                             <h:outputText value="#{bundle.CategoryDesc}"/><br/>
-                            <h:inputText value="#{categoryBean.categoryDTO.descript}" required="true" styleClass = "form-control"/><br/>
+                            <h:inputText value="#{categoryBean.categoryDTO.descript}" required="true" requiredMessage="Description is required" styleClass = "form-control"/><br/>
                             
                             <br/>
                             <br/>
